# amaiss

./: .clang-format-ignore  .gitignore  CMakeLists.txt  Makefile  README.md
amaiss/: CMakeLists.txt  brutal_index.cpp  brutal_index.h  exact_matcher.h  id_map_index.cpp  id_map_index.h  id_selector.h  index.cpp  index.h  index_common.cpp  index_common.h  index_factory.cpp  index_factory.h  inverted_index.cpp  inverted_index.h  seismic_common.h  seismic_index.cpp  seismic_index.h  seismic_scalar_quantized_index.cpp  seismic_scalar_quantized_index.h  sparse_vectors.cpp  sparse_vectors.h  types.h
amaiss/cluster/: inverted_list_clusters.cpp  inverted_list_clusters.h  kmeans_utils.cpp  kmeans_utils.h  random_kmeans.cpp  random_kmeans.h
amaiss/invlists/: inverted_lists.cpp  inverted_lists.h
amaiss/io/: buffered_io.cpp  buffered_io.h  file_io.cpp  file_io.h  index_io.cpp  index_io.h  io.h  seismic_invlists_writer.h
amaiss/python/: CMakeLists.txt  __init__.py  amaiss.py  amaiss_typemaps.i  amaiss_wrap.cpp  class_wrappers.py  loader.py  pyproject.toml  setup.py  swigamaiss.swig
amaiss/utils/: checks.h  dense_vector_matrix.h  distance.h  distance_avx2.h  distance_avx512.h  distance_neon.h  distance_simd.h  distance_sve.h  prefetch.h  print.h  ranker.h  scalar_quantizer.h  vector_process.h
benchmarks/: CMakeLists.txt  index_search_benchmark.cpp  ranker_benchmark.cpp  seismic_search_benchmark.cpp  seismic_sq_search_benchmark.cpp
cmake/: third_party.cmake
demos/: example.py  seismic_sq.py  seismic_sq_idmap.py  seismic_sq_idmap_idselector.py
nsparse/: CMakeLists.txt  brutal_index.cpp  brutal_index.h  exact_matcher.h  id_map_index.cpp  id_map_index.h  id_selector.h  index.cpp  index.h  index_factory.cpp  index_factory.h  inverted_index.cpp  inverted_index.h  seismic_common.h  seismic_index.cpp  seismic_index.h  seismic_scalar_quantized_index.cpp  seismic_scalar_quantized_index.h  sparse_vectors.cpp  sparse_vectors.h  types.h
nsparse/cluster/: inverted_list_clusters.cpp  inverted_list_clusters.h  kmeans_utils.cpp  kmeans_utils.h  random_kmeans.cpp  random_kmeans.h
nsparse/invlists/: inverted_lists.cpp  inverted_lists.h
nsparse/io/: buffered_io.cpp  buffered_io.h  file_io.cpp  file_io.h  index_io.cpp  index_io.h  io.h  seismic_invlists_writer.h
nsparse/python/: CMakeLists.txt  __init__.py  class_wrappers.py  loader.py  nsparse.py  nsparse_typemaps.i  nsparse_wrap.cpp  setup.py  swignsparse.swig
nsparse/utils/: checks.h  dense_vector_matrix.h  distance.h  distance_avx2.h  distance_avx512.h  distance_neon.h  distance_simd.h  distance_sve.h  prefetch.h  ranker.h  scalar_quantizer.h  vector_process.h
tests/: CMakeLists.txt  distance_test.cpp  exact_matcher_test.cpp  id_map_index_test.cpp  id_selector_test.cpp  index_factory_test.cpp  index_io_test.cpp  inverted_index_test.cpp  inverted_list_clusters_test.cpp  inverted_lists_test.cpp  kmeans_utils_test.cpp  prefetch_test.cpp  random_kmeans_test.cpp  ranker_test.cpp  scalar_quantizer_test.cpp  seismic_common_test.cpp  seismic_index_test.cpp  seismic_invlists_writer_test.cpp  seismic_scalar_quantized_index_test.cpp  sparse_vectors_test.cpp  vector_process_test.cpp
