[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amaiss"
version = "0.1.0"
description = "Python bindings for AMAISS sparse vector search library"
requires-python = ">=3.8"
dependencies = ["numpy>=1.20.0,<2.0", "packaging"]
license = "MIT"

[tool.setuptools]
packages = ["amaiss"]

[tool.setuptools.package-data]
amaiss = ["*.so", "*.dylib", "*.pyd"]
